add Redisson distributed lock to prevent race condition in createOrder and cancelOrder