@@ -12,10 +12,7 @@ import com.BTL_JAVA.BTL.Entity.Product.ProductVariation;
 import com.BTL_JAVA.BTL.Entity.User;
 import com.BTL_JAVA.BTL.Exception.AppException;
 import com.BTL_JAVA.BTL.Exception.ErrorCode;
-import com.BTL_JAVA.BTL.Repository.AddressRepository;
-import com.BTL_JAVA.BTL.Repository.OrderRepository;
-import com.BTL_JAVA.BTL.Repository.ProductSaleRepository;
-import com.BTL_JAVA.BTL.Repository.UserRepository;
+import com.BTL_JAVA.BTL.Repository.*;
 import com.BTL_JAVA.BTL.enums.OrderStatus;
 import com.BTL_JAVA.BTL.enums.PaymentStatus;
 import jakarta.transaction.Transactional;
@@ -23,39 +20,47 @@ import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.redisson.api.RLock;
+import org.redisson.api.RedissonClient;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.support.TransactionTemplate;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
-@FieldDefaults(level = AccessLevel.PRIVATE)
-
+@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 public class OrderService {
-    final OrderRepository orderRepository;
-    final UserRepository userRepository;
-    final AddressRepository addressRepository;
-    final com.BTL_JAVA.BTL.Repository.ProductVariationRepository productVariationRepository;
-    final ProductSaleRepository productSaleRepository;
+
+    OrderRepository orderRepository;
+    UserRepository userRepository;
+    AddressRepository addressRepository;
+    ProductVariationRepository productVariationRepository;
+    ProductSaleRepository productSaleRepository;
+
+    RedissonClient redissonClient;
+    TransactionTemplate transactionTemplate;
 
     // Các phương thức lấy người và ktra quyền
-    User getCurrentAuthenticatedUser() {
+    private User getCurrentAuthenticatedUser() {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName(); // Lấy user ID từ token
         return userRepository.findById(Integer.parseInt(userId))
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
     }
 
-    void checkAdminPermission(User user) {
+    private void checkAdminPermission(User user) {
         boolean isAdmin = user.getRoles().stream()
                 .anyMatch(role -> role.getNameRoles().equals("ADMIN"));
         if (!isAdmin) {
@@ -89,13 +94,11 @@ public class OrderService {
         return originalPrice;
     }
 
-    // tạo Order
-    @Transactional
+    // tạo Order - redis
     public OrderResponse createOrder(OrderRequest request) {
         // 1. Lấy thông tin user
         User user = getCurrentAuthenticatedUser();
 
-        // 2. Lấy địa chỉ của user
         Address address = addressRepository.findByUserId(user.getId())
                 .orElseThrow(() -> new AppException(ErrorCode.ADDRESS_NOT_FOUND));
 
@@ -103,7 +106,90 @@ public class OrderService {
             throw new AppException(ErrorCode.PHONE_NUMBER_EMPTY);
         }
 
-        // 3. Tạo đơn hàng
+        // 2. Sắp xếp các VariationId để CHỐNG DEADLOCK
+        List<Integer> sortedVariationIds = request.getItems().stream()
+                .map(OrderRequest.Item::getVariationId)
+                .distinct()
+                .sorted()
+                .toList();
+
+        // 3. Chuẩn bị MultiLock cho tất cả item trong cart
+        List<RLock> locks = sortedVariationIds.stream()
+                .map(id -> redissonClient.getLock("lock:variation:" + id))
+                .toList();
+        RLock multiLock = redissonClient.getMultiLock(locks.toArray(new RLock[0]));
+
+        boolean isLocked = false;
+        try{
+            // 4. TRY-LOCK FAIL-FAST (Đợi tối đa 2s, khóa sống tối đa 30s nếu server sập)
+            isLocked = multiLock.tryLock(2, 30, TimeUnit.SECONDS);
+            if(!isLocked) {
+                log.warn("User {} bị chặn do tranh chấp mua hàng.", user.getId());
+                throw new AppException(ErrorCode.SYSTEM_BUSY, "Hệ thống đang xử lý giao dịch, vui lòng thử lại sau giây lát!");
+            }
+
+            // 5. Mở Transaction db bên trong khóa
+            Order savedOrder = transactionTemplate.execute(status -> {
+                try {
+                    return executeOrderCreationDBLogic(
+                            user,
+                            address,
+                            request,
+                            sortedVariationIds
+                    );
+                }
+                catch (Exception e){
+                    status.setRollbackOnly();
+                    throw e;
+//                    try {
+//                        throw e;
+//                    } catch (InterruptedException ex) {
+//                        throw new RuntimeException(ex);
+//                    }
+                }
+            });
+
+            return mapToOrderResponse(savedOrder);
+
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new AppException(ErrorCode.SYSTEM_ERROR);
+        }
+        finally {
+            // 6. Nhả khóa (Sau khi db commit)
+            if(isLocked){
+                try{
+                    multiLock.unlock();
+                } catch (Exception e){
+                    log.error("Lỗi unlock: {}", e.getMessage());
+                }
+            }
+        }
+
+    }
+
+    private Order executeOrderCreationDBLogic(User user, Address address, OrderRequest request, List<Integer> variationIds) {
+        // 1. Lấy tất cả Variations trong 1 câu Query
+        List<ProductVariation> variations = productVariationRepository.findAllByIdsWithProduct(variationIds);
+        Map<Integer, ProductVariation> variationMap = variations.stream()
+                .collect(Collectors.toMap(ProductVariation::getId, v -> v));
+
+        // 2. Lấy tất cả Sales đang active trong 1 câu Query
+        List<Integer> productIds = variations.stream()
+                .map(v -> v.getProduct().getProductId())
+                .distinct()
+                .collect(Collectors.toList());
+
+        List<ProductSale> activeSales = productSaleRepository.findActiveSalesByProductIds(productIds, LocalDateTime.now());
+
+        // Map: productId -> Mức giảm giá cao nhất
+        Map<Integer, BigDecimal> maxDiscountMap = activeSales.stream()
+                .collect(Collectors.toMap(
+                        sale -> sale.getProduct().getProductId(),
+                        ProductSale::getSaleValue,
+                        (v1, v2) -> v1.compareTo(v2) > 0 ? v1 : v2 // Lấy sale lớn nhất nếu có nhiều sale
+                ));
+
         Order order = Order.builder()
                 .user(user)
                 .fullAddress(address.getStreet() + ", " + address.getWard() + ", " + address.getCity())
@@ -115,22 +201,24 @@ public class OrderService {
         List<OrderDetail> orderDetails = new ArrayList<>();
         double totalAmount = 0;
 
-        // 4. Xử lý từng item trong đơn hàng
         for (OrderRequest.Item item : request.getItems()) {
-            // Lấy ProductVariation từ database
-            ProductVariation variation = productVariationRepository.findById(item.getVariationId())
-                    .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_VARIATION_NOT_FOUND));
+            ProductVariation variation = variationMap.get(item.getVariationId());
+            if (variation == null) throw new AppException(ErrorCode.PRODUCT_VARIATION_NOT_FOUND);
 
-            // Kiểm tra tồn kho
+            // Kiểm tra tồn kho an toàn
             if (variation.getStockQuantity() < item.getQuantity()) {
                 throw new AppException(ErrorCode.INSUFFICIENT_STOCK);
             }
 
-            // Tính giá có áp dụng sale
+            // Lấy discount từ Map (O(1)) thay vì Query DB
+            BigDecimal discount = maxDiscountMap.getOrDefault(variation.getProduct().getProductId(), BigDecimal.ZERO);
             Double originalPrice = variation.getProduct().getPrice();
-            Double finalPrice = calculateFinalPrice(variation.getProduct().getProductId(), originalPrice);
+            BigDecimal discountMultiplier = BigDecimal.ONE.subtract(discount);
+            double finalPrice = originalPrice * discountMultiplier.doubleValue();
 
-            // Tạo OrderDetail
+            // Trừ tồn kho trên memory
+            variation.setStockQuantity(variation.getStockQuantity() - item.getQuantity());
+
             OrderDetail orderDetail = OrderDetail.builder()
                     .order(order)
                     .productVariation(variation)
@@ -139,20 +227,15 @@ public class OrderService {
                     .build();
             orderDetails.add(orderDetail);
 
-            // Cộng tổng tiền
             totalAmount += finalPrice * item.getQuantity();
-
-            // Trừ số lượng tồn kho
-            variation.setStockQuantity(variation.getStockQuantity() - item.getQuantity());
         }
 
-        // 5. Set thông tin cho order và lưu
         order.setOrderDetails(orderDetails);
         order.setTotalAmount(totalAmount);
 
-        Order savedOrder = orderRepository.save(order);
+//        Thread.sleep(10000);
 
-        return mapToOrderResponse(savedOrder);
+        return orderRepository.save(order);
     }
 
     // Lấy danh sách đơn hàng của user - Tối ưu với JOIN FETCH
@@ -161,12 +244,12 @@ public class OrderService {
 
         return orderRepository.findByUserWithDetails(currentUser).stream()
                 .map(this::mapToOrderResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Hủy đơn hàng - Tối ưu với JOIN FETCH
-    @Transactional
+    // Hủy đơn hàng - redis
     public OrderResponse cancelOrder(Integer orderId) {
+
         Order order = orderRepository.findByIdWithDetails(orderId)
                 .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
 
@@ -178,7 +261,6 @@ public class OrderService {
             if ("VNPAY".equals(payment.getPaymentMethod())) {
                 throw new AppException(ErrorCode.CANNOT_CANCEL_PAID_ORDER);
             }
-            payment.setStatus(PaymentStatus.REFUNDED);
         }
 
         // Kiểm tra quyền: Admin có thể hủy tất cả, user thường chỉ hủy của mình
@@ -193,14 +275,57 @@ public class OrderService {
             throw new AppException(ErrorCode.CANNOT_CANCEL_ORDER);
         }
 
-        for (OrderDetail detail : order.getOrderDetails()) {
-            ProductVariation variation = detail.getProductVariation();
-            variation.setStockQuantity(variation.getStockQuantity() + detail.getQuantity());
+        // Lấy danh sách ID để tạo khóa hoàn kho
+        List<Integer> sortedVariationIds = order.getOrderDetails().stream()
+                .map(detail -> detail.getProductVariation().getId())
+                .distinct()
+                .sorted()
+                .toList();
+
+        List<RLock> locks = sortedVariationIds.stream()
+                .map(id -> redissonClient.getLock("lock:variation:" + id))
+                .toList();
+        RLock multiLock = redissonClient.getMultiLock(locks.toArray(new RLock[0]));
+
+        boolean isLocked = false;
+        try{
+            isLocked = multiLock.tryLock(2, 30, TimeUnit.SECONDS);
+
+            // Xử lý Hủy đơn trong Transaction DB
+            Order canceledOrder = transactionTemplate.execute(status -> {
+               if(payment != null && payment.getStatus() == PaymentStatus.COMPLETED){
+                   payment.setStatus(PaymentStatus.REFUNDED);
+               }
+
+                // Trả lại tồn kho
+                for(OrderDetail detail : order.getOrderDetails()){
+                    ProductVariation productVariation = detail.getProductVariation();
+                    productVariation.setStockQuantity(productVariation.getStockQuantity() + detail.getQuantity());
+                }
+
+//                try {
+//                    Thread.sleep(100000);
+//                } catch (InterruptedException e) {
+//                    throw new RuntimeException(e);
+//                }
+
+                order.setStatus(OrderStatus.CANCELED);
+                return orderRepository.save(order);
+            });
+
+            return mapToOrderResponse(canceledOrder);
+
+        } catch (InterruptedException e){
+            Thread.currentThread().interrupt();
+            throw new AppException(ErrorCode.SYSTEM_ERROR);
+        } finally {
+            if(isLocked){
+                try{
+                    multiLock.unlock();
+                } catch (Exception e){}
+            }
         }
 
-        order.setStatus(OrderStatus.CANCELED);
-        Order cancelOrder = orderRepository.save(order);
-        return mapToOrderResponse(cancelOrder);
     }
 
     // Chỉnh sửa Order - Có thể cập nhật địa chỉ, số điện thoại và ghi chú
